# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]
### Changed
- `lazy` argument changed to `initialState` to mirror `useState` argument of either an initial value state, or a function for lazy initialization.
- `initialState` value (or evaluated from functional argument) is cached upon initialization, when existing cached value returns null.

## [0.1.0] - 2019-03-23
### Added
- Initial implementation of `useCachedState`.