@@ -1,1 +1,1 @@
-lts/*
+stable
