@@ -1,6 +1,6 @@
 {
   "name": "use-cached",
-  "version": "0.2.0-alpha",
+  "version": "0.3.0-alpha",
   "author": "woozyking <runzhou.li@gmail.com>",
   "license": "MIT",
   "description": "React cached hooks.",
