@@ -1,44 +1,62 @@
-import { useState } from 'react'
+import { useEffect, useState, useReducer } from 'react'
 import lscache from 'lscache'
 
 /**
- * Wraps useState using cache get for initial value population.
- * setState triggers a cache set.
+ * Higher order function that configures and returns a modified version of
+ * React.useState function.
  *
- * @param {string} key - Cache key.
- * @param {number} [ttl = null]
- *  [Optional] Cache expiration in minutes.
- * @param {} [initialState = null]
- *  [Optional] Same as the initial state (value|function) supplied to useState. Only effective when cached value is null.
- *
- * @return [state, setState]
+ * @param {string} key cache key.
+ * @param {number} [ttl = null] cache TTL/expiration. By default in minutes.
+ * @returns {function(*): [any, function]} wrapped version of React.useState
  */
-export function useCachedState(key, ttl = null, initialState = null) {
+export const cachedState = (key, ttl = null) => (...args) => {
   if (!key || typeof key !== 'string') {
     throw new Error('key must be a non-empty string.')
   }
 
-  let cachedInit = lscache.get(key)
-  if (!cachedInit) {
-    if (typeof initialState === 'function') {
-      cachedInit = initialState()
-    } else {
-      cachedInit = initialState
-    }
-    lscache.set(key, cachedInit, ttl)
+  if (ttl !== null && isNaN(parseFloat(ttl))) {
+    throw new Error('ttl can only be null or a valid number.')
   }
 
-  const [state, setState] = useState(cachedInit)
+  const cachedState = lscache.get(key)
 
-  const setCachedState = (newState, time = ttl) => {
-    let value = newState
-    if (typeof newState === 'function') {
-      // get new state value on functional updates
-      value = newState(state)
-    }
-    lscache.set(key, value, time)
-    return setState(newState)
+  const [state, action] = cachedState !== null
+    ? useState(cachedState) // cachedState as initialState (value)
+    : useState(...args) // initialState (value | function)
+
+  useEffect(() => {
+    lscache.set(key, state, ttl)
+  }, [state, key, ttl])
+
+  return [state, action]
+}
+
+/**
+ * Higher order function that configures and returns a modified version of
+ * React.useRecuder function.
+ *
+ * @param {string} key cache key.
+ * @param {number} [ttl = null] cache TTL/expiration. By default in minutes.
+ * @returns {function(*): [any, function]} wrapped version of React.useRecuder
+ */
+export const cachedReducer = (key, ttl = null) => (...args) => {
+  if (!key || typeof key !== 'string') {
+    throw new Error('key must be a non-empty string.')
   }
 
-  return [state, setCachedState]
+  if (ttl !== null && isNaN(parseFloat(ttl))) {
+    throw new Error('ttl can only be null or a valid number.')
+  }
+
+  const cachedState = lscache.get(key)
+
+  const [state, action] = cachedState !== null
+    ? useReducer(args[0], cachedState, args[2]) // reducer, cachedState as initialArg, init
+    : useReducer(...args) // reducer, initialArg, init
+
+  useEffect(() => {
+    lscache.set(key, state, ttl)
+  }, [state, key, ttl])
+
+  return [state, action]
 }
